edea-domain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edea-demo-weblogic-ingress
  namespace: edea-demo-weblogic-domain
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edea-demo-admin-server
                port:
                  number: 7001
